Added neural network with forward and backward pass

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -474,31 +474,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "9af179f2-e1d0-4c32-a807-e02a298b2318",
+   "execution_count": null,
+   "id": "516af401-0200-4721-8117-336325292862",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "j, o, prob=tensor(0.1640)\n",
-      "o, h, prob=tensor(0.0216)\n",
-      "h, n, prob=tensor(0.0182)\n",
-      "n, z, prob=tensor(0.0080)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(14.4838)"
-      ]
-     },
-     "execution_count": 202,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "word = 'johnz'\n",
     "log_likelihood = 0.0\n",
@@ -513,9 +492,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0cc5d297-0a3c-4bdd-8366-b1b35f563a8e",
+   "metadata": {},
+   "source": [
+    "Now the same process will be done by Neural Net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "d65e4675-6800-44d3-affc-f2a1eef6ec30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ". e\n",
+      "e m\n",
+      "m m\n",
+      "m a\n",
+      "a .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating the dataset for the Neural Network\n",
+    "\n",
+    "xs, ys = [], []\n",
+    "for word in words[:1]:\n",
+    "    word = ['.']+list(word)+['.']\n",
+    "    for ch1, ch2 in zip(word, word[1:]):\n",
+    "        print(ch1, ch2)\n",
+    "        ix = stoi[ch1]\n",
+    "        iy = stoi[ch2]\n",
+    "        xs.append(ix)\n",
+    "        ys.append(iy)\n",
+    "xs = torch.tensor(xs)\n",
+    "ys = torch.tensor(ys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75a48778-b3a7-464a-84a8-ab7db10a53f4",
+   "metadata": {},
+   "source": [
+    "#One hot encoding is required before feeding into the Neural Net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "46ec7032-cd2e-4da7-a66b-c3c627378cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "bdac6f11-d3e4-4cce-8cfa-545bd12c61a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "         0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xs_encoded = F.one_hot(xs, num_classes=27).float()\n",
+    "xs_encoded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "id": "33559b94-d2ca-4674-a137-04fab3e4005d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "g = torch.Generator().manual_seed(32)\n",
+    "\n",
+    "# Forward Pass\n",
+    "W = torch.randn((27, 27), generator=g, requires_grad=True)\n",
+    "xs_encoded @ W\n",
+    "r = (xs_encoded @ W).exp()\n",
+    "probs = r/r.sum(dim=1, keepdims=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "id": "9fed9964-83fc-4eb2-b0a4-681931988236",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.6499, grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Loss\n",
+    "loss = -probs[torch.arange(5), ys].log().mean()\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "id": "37797619-95de-4521-80a0-cf334281f3bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Backward Pass\n",
+    "W.grad = None\n",
+    "loss.backward()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "id": "215e65cd-16b2-478d-b5bc-b625d9634863",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update\n",
+    "W.data += -0.1 * W.grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "id": "9cc0152a-0c5e-471a-b88f-bcade5725e0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.5703, grad_fn=<NegBackward0>)"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking if loss is reduced\n",
+    "\n",
+    "# Forward Pass \n",
+    "xs_encoded @ W\n",
+    "r = (xs_encoded @ W).exp()\n",
+    "probs = r/r.sum(dim=1, keepdims=True)\n",
+    "\n",
+    "# Loss\n",
+    "loss = -probs[torch.arange(5), ys].log().mean()\n",
+    "loss"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "709298cf-3fe2-4a88-a5c9-a4fcb8007cb6",
+   "id": "42524e6b-9845-4bf7-86e5-a93239d1720c",
    "metadata": {},
    "outputs": [],
    "source": []
